--- a/model_thanh_prior_prediction.ipynb
+++ b/model_thanh_prior_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 248,
    "metadata": {
     "collapsed": true
    },
@@ -12,14 +12,14 @@
     "import glob\n",
     "import os\n",
     "import sklearn\n",
-    "from sklearn.preprocessing import StandardScaler, Normalizer\n",
+    "from sklearn.preprocessing import Normalizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 249,
    "metadata": {
     "collapsed": false
    },
@@ -66,13 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 250,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df_features = dataset[['B365H','B365D','B365A','BWH','BWD','BWA','IWH','IWD','IWA']]\n",
+    "df_features = dataset[['B365H','B365D','B365A','IWH','IWD','IWA']]\n",
     "df_features = df_features.interpolate(method='linear')\n",
     "result = dataset['FTR']\n",
     "\n",
@@ -85,13 +85,12 @@
     "result = np.array(result[0])\n",
     "train_size = int(len(features) * 0.8)\n",
     "X_train, X_val = features[:train_size], features[train_size:]\n",
-    "y_train, y_val = result[:train_size], result[train_size:]\n",
-    "# X_val, X_test, y_val, y_test = train_test_split(X_test, y_test, test_size=0.5, random_state=42)"
+    "y_train, y_val = result[:train_size], result[train_size:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 251,
    "metadata": {
     "collapsed": false
    },
@@ -100,16 +99,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5418439716312057\n"
+      "0.5333333333333333\n"
      ]
     }
    ],
    "source": [
     "from sklearn.linear_model import SGDClassifier\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.svm import SVC\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
-    "model = SGDClassifier()\n",
+    "model = GradientBoostingClassifier()\n",
     "model.fit(X_train, y_train)\n",
     "y_pred = model.predict(X_val)\n",
     "print(accuracy_score(y_pred, y_val))"
@@ -117,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 252,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5014184397163121\n"
+      "0.5113475177304965\n"
      ]
     }
    ],
@@ -140,23 +138,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5639\n",
-      "[0, 2.14, 2.33, 1.72, 1.19, 0, 1.46, 3.1, 0, 1.38, 0, 2.22, 1.46, 1.8, 0, 1.16, 0, 0, 1.62, 0, 0, 1.38, 2.07, 1.88, 0, 0, 1.35, 2.16, 2.35, 0, 0, 0, 1.14, 0, 1.18, 1.85, 0, 0, 2.1, 1.38, 0, 2.5, 2.36, 0, 2.41, 0, 0, 1.54, 1.37, 0, 0, 2.13, 2.05, 0, 1.9, 0, 0, 2.35, 1.1, 1.45, 2.25, 0, 1.6, 0, 1.35, 0, 2.04, 0, 1.71, 2.52, 1.59, 1.7, 0, 1.57, 2.44, 0, 2.26, 1.69, 2.81, 1.59, 1.81, 2.2, 0, 2.4, 0, 0, 0, 0, 0, 1.54, 1.47, 1.81, 0, 2.55, 0, 1.82, 1.6, 1.56, 0, 0, 0, 0, 1.53, 1.76, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1.29, 0, 0, 0, 0, 1.68, 2.1, 1.35, 1.59, 1.43, 0, 0, 0, 1.67, 2.56, 0, 0, 2.1, 0, 0, 1.44, 1.88, 1.56, 2.5, 0, 0, 1.54, 0, 0, 1.38, 1.96, 2.53, 3.84, 1.99, 2.9, 0, 0, 0, 1.19, 0, 2.72, 2.07, 0, 0, 0, 2.38, 0, 1.15, 2.12, 1.58, 0, 2.08, 2.1, 1.57, 0, 0, 0, 2.63, 0, 0, 1.76, 0, 0, 0, 2.11, 0, 0, 0, 1.83, 0, 3.45, 1.85, 0, 0, 1.5, 1.57, 1.53, 2.53, 0, 0, 0, 1.77, 2.06, 0, 1.55, 3.71, 2.01, 0, 0, 1.15, 1.95, 1.82, 0, 0, 0, 0, 0, 2.39, 2.48, 0, 2.12, 1.6, 0, 0, 1.81, 1.85, 2.09, 0, 1.66, 1.72, 0, 0, 2.58, 1.52, 0, 1.21, 0, 0, 0, 0, 1.91, 1.6, 1.85, 1.7, 0, 1.19, 1.47, 1.62, 0, 1.29, 1.59, 0, 1.55, 2.5, 2.0, 2.18, 1.23, 0, 0, 0, 3.4, 0, 2.3, 0, 0, 1.16, 0, 3.65, 0, 1.38, 0, 1.82, 0, 2.14, 0, 1.49, 0, 1.24, 2.04, 0, 0, 0, 2.25, 0, 0, 0, 0, 0, 1.5, 0, 2.2, 1.52, 1.93, 0, 0, 1.37, 3.55, 0, 0, 1.96, 0, 1.79, 1.29, 3.34, 1.38, 2.46, 0, 0, 0, 2.27, 2.78, 0, 1.57, 1.32, 0, 2.42, 1.26, 0, 0, 0, 0, 0, 1.6, 0, 1.45, 2.28, 1.25, 0, 0, 0, 2.02, 1.89, 0, 0, 2.18, 0, 0, 0, 0, 0, 1.53, 1.62, 2.18, 1.23, 0, 0, 2.32, 0, 1.38, 0, 1.6, 2.68, 1.92, 1.82, 0, 1.72, 3.6, 0, 0, 1.56, 1.63, 2.35, 2.17, 0, 2.33, 1.7, 0, 0, 0, 0, 1.56, 1.57, 0, 0, 0, 1.63, 0, 0, 0, 0, 1.74, 0, 1.4, 0, 0, 1.86, 1.42, 1.63, 0, 0, 1.86, 0, 0, 0, 0, 1.5, 0, 1.38, 2.24, 1.53, 0, 2.13, 1.33, 3.3, 2.4, 0, 0, 0, 0, 1.32, 0, 1.87, 0, 1.54, 0, 0, 2.15, 0, 3.63, 0, 1.34, 2.32, 2.08, 3.7, 0, 1.58, 1.27, 0, 0, 0, 0, 1.78, 1.96, 1.79, 0, 1.58, 1.28, 1.67, 1.67, 0, 0, 1.49, 0, 1.19, 1.48, 0, 1.76, 0, 0, 1.59, 2.6, 1.3, 2.04, 1.75, 0, 1.37, 2.36, 0, 1.24, 1.87, 0, 0, 1.13, 1.8, 0, 2.55, 1.83, 2.66, 1.3, 0, 0, 0, 1.97, 0, 0, 0, 1.48, 1.91, 0, 1.55, 0, 1.63, 1.24, 3.56, 2.38, 1.33, 1.83, 1.8, 3.75, 0, 2.1, 1.25, 0, 0, 2.5, 0, 1.83, 1.81, 0, 0, 1.68, 0, 0, 0, 0, 0, 2.38, 0, 0, 0, 1.42, 1.83, 1.75, 0, 0, 2.2, 0, 3.75, 1.39, 0, 0, 1.14, 0, 2.48, 1.66, 0, 2.15, 0, 2.09, 1.22, 0, 0, 0, 0, 1.46, 0, 2.48, 2.38, 0, 2.73, 0, 0, 1.42, 2.45, 0, 2.17, 0, 2.32, 2.08, 1.76, 0, 0, 2.62, 0, 1.43, 0, 3.78, 0, 1.84, 2.52, 3.33, 3.58, 0, 0, 0, 1.53, 1.22, 1.8, 1.52, 0, 1.33, 0, 0, 2.34, 1.68, 1.34, 0, 0, 2.52, 0, 1.35, 0, 0, 1.41, 1.44, 1.7, 2.1, 0, 2.44, 0, 1.47, 1.23, 0, 1.61, 1.45, 2.51, 0, 2.36, 1.19, 1.71, 1.32, 1.27, 1.47, 0, 1.78, 2.36, 2.36, 1.18, 0, 0, 2.28, 0, 1.15, 1.98, 1.21, 0, 0, 1.22, 1.46, 1.76, 0, 1.75, 2.02, 0, 1.74, 0, 2.26, 0, 0, 1.19, 1.42, 1.59, 1.66, 0, 0, 0, 2.15, 0, 0, 2.18, 1.34, 0, 1.77, 0, 0, 2.4, 3.64, 1.33, 0, 0, 2.47, 1.88, 0, 0, 2.63, 0, 1.97, 0, 0, 1.63, 0, 1.75, 0, 2.66, 1.63, 0, 1.14, 0, 0, 0, 1.29, 2.28, 0, 0, 2.4, 2.2, 1.2, 1.32, 0, 0, 3.8, 1.85, 0, 1.5, 0, 0, 1.7, 1.14, 2.15, 0, 1.95, 2.36, 0, 2.48, 1.18, 1.7, 1.63, 1.94, 0, 0, 0, 0, 1.32, 2.2, 0, 1.86, 2.45, 1.54, 0, 0, 0, 1.33, 1.65, 1.45, 1.66, 1.32, 0, 1.88, 0, 1.58, 2.3, 2.24, 1.36, 0, 1.67, 0, 2.45, 1.58, 0, 2.38, 1.98, 2.43, 0, 0, 2.26, 1.8, 1.16, 0, 1.26, 0, 0, 0, 0, 1.85, 1.56, 0, 2.75, 2.4, 0, 0, 2.0, 0, 2.34, 0, 2.5, 0, 0, 0, 1.28, 0, 0, 2.36, 0, 1.51, 0, 0, 2.44, 1.23, 0, 2.18, 3.5, 1.14, 2.26, 0, 0, 2.91, 1.59, 1.22, 0, 0, 1.47, 1.43, 0, 0, 0, 1.33, 0, 1.49, 1.84, 1.82, 2.28, 0, 0, 1.74, 0, 0, 1.5, 0, 1.86, 1.2, 1.56, 1.7, 1.49, 0, 1.29, 2.2, 1.38, 0, 3.7, 2.1, 0, 0, 0, 0, 1.42, 2.01, 0, 0, 1.4, 0, 2.5, 0, 1.22, 0, 1.95, 1.19, 1.2, 1.29, 1.95, 0, 0, 2.42, 1.72, 1.4, 1.67, 0, 0, 1.41, 1.85, 1.6, 0, 1.09, 0, 0, 0, 0, 0, 0, 1.44, 2.6, 0, 2.62, 0, 1.47, 0, 0, 0, 0, 1.85, 0, 1.96, 1.46, 1.14, 1.22, 1.36, 0, 3.46, 1.51, 0, 0, 0, 0, 1.5, 0, 1.1, 0, 1.34, 2.14, 0, 2.25, 1.59, 0, 0, 1.53, 2.32, 0, 1.92, 0, 2.18, 0, 1.37, 0, 1.54, 1.86, 0, 2.15, 0, 1.95, 0, 0, 0, 2.02, 1.4, 0, 1.8, 0, 1.44, 1.14, 1.88, 0, 2.17, 1.84, 0, 2.15, 0, 0, 0, 0, 1.78, 1.52, 1.87, 1.6, 0, 3.6, 0, 0, 2.34, 0, 0, 1.48, 1.69, 2.56, 0, 2.4, 0, 2.69, 1.23, 0, 2.23, 0, 0, 0, 0, 1.59, 1.33, 1.75, 0, 0, 2.0, 1.88, 0, 0, 1.24, 1.77, 1.77, 1.16, 3.54, 2.34, 0, 0, 0, 1.96, 0, 2.25, 0, 0, 1.28, 0, 1.68, 0, 2.42, 1.59, 0, 1.95, 0, 0, 0, 2.28, 2.22, 1.8, 1.55, 1.36, 1.35, 1.33, 0, 1.33, 1.98, 0, 2.09, 0, 0, 2.17, 0, 0, 0, 0, 2.18, 0, 1.32, 0, 3.7, 0, 2.23, 1.74, 0, 2.0, 0, 0, 0, 0, 0, 1.71, 1.7, 1.56, 2.24, 0, 1.4, 0, 3.35, 0, 0, 1.85, 0, 0, 1.22, 1.91, 2.19, 0, 0, 0, 1.94, 1.38, 1.44, 0, 0, 2.71, 0, 0, 0, 0, 0, 1.98, 0, 0, 0, 1.98, 1.27, 1.58, 0, 1.87, 0, 0, 0, 2.55, 0, 0, 0, 1.66, 1.88, 0, 0, 2.05, 1.74, 1.83, 1.33, 0, 2.65, 1.4, 1.52, 1.52, 1.24, 2.12, 1.84, 1.67, 0, 0, 0, 2.5, 2.05, 0, 2.8, 0, 2.08, 1.48, 1.38, 1.63, 0, 0, 1.72, 1.49, 0, 1.74, 1.76, 0, 0, 0, 0, 1.29, 1.7, 1.31, 2.63, 0, 2.62, 3.3, 0, 1.8, 2.49, 0, 1.61, 1.75, 0, 0, 1.71, 2.2, 1.54, 1.65, 2.15, 0, 0, 2.63, 0, 1.27, 0, 3.88, 0, 0, 0, 0, 0, 2.59, 1.18, 0, 1.75, 1.77, 0, 2.47, 0, 0, 2.5, 1.21, 0, 1.92, 2.58, 1.84, 0, 0, 0, 1.92, 1.61, 1.81, 0, 3.82, 2.88, 1.7, 1.54, 2.67, 1.28, 1.83, 1.35, 1.6, 0, 1.64, 1.3, 1.23, 2.08, 2.24, 1.19, 1.87, 0, 1.52, 0, 0, 0, 0, 2.2, 0, 2.38, 0, 1.91, 1.41, 0, 2.1, 1.39, 0, 1.64, 2.07, 0, 1.55, 0, 0, 3.48, 0, 2.55, 1.25, 1.28, 0, 0, 1.7, 1.43, 2.1, 0, 3.86, 0, 1.53, 0, 2.0, 1.56, 0, 1.39, 1.21, 3.62, 1.36, 0, 0, 1.8, 3.83, 3.82, 1.34, 2.0, 0, 1.26, 1.97, 0, 1.75, 1.76, 0, 1.68, 1.33, 2.05, 0, 0, 0, 1.34, 0, 2.22, 1.21, 0, 1.78, 3.36, 0, 1.93, 0, 1.18, 0, 2.01, 1.71, 1.83, 1.51, 1.96, 1.73, 0, 1.31, 1.53, 1.58, 0, 1.57, 0, 0, 0, 1.17, 0, 1.8, 0, 1.43, 0, 1.45, 1.51, 0, 1.58, 0, 0, 1.36, 1.49, 0, 0, 3.46, 2.1, 0, 1.54, 1.8, 2.03, 1.68, 1.74, 0, 4.32, 0, 0, 0, 1.4, 0, 1.9, 1.46, 1.5, 0, 0, 1.46, 1.95, 1.55, 1.83, 0, 1.14, 2.19, 0, 0, 1.31, 0, 1.3, 1.74, 2.26, 2.12, 0, 0, 1.11, 0, 0, 0, 0, 0, 0, 1.22, 0, 1.38, 0, 1.63, 0, 1.45, 1.93, 0, 0, 2.17, 0, 0, 2.25, 2.25, 1.8, 0, 0, 2.51, 1.3, 1.51, 1.89, 0, 2.0, 0, 1.78, 1.29, 0, 0, 1.95, 1.25, 1.98, 0, 2.14, 1.29, 0, 0, 0, 0, 1.63, 0, 0, 0, 0, 0, 0, 2.49, 1.17, 2.3, 1.78, 1.28, 0, 1.92, 2.19, 1.53, 2.23, 2.27, 0, 0, 0, 0, 0, 0, 0, 1.87, 0, 0, 0, 2.27, 0, 1.43, 0, 0, 1.75, 1.64, 0, 0, 1.56, 1.4, 2.31, 1.1, 2.75, 0, 0, 1.82, 1.51, 0, 0, 1.69, 1.6, 3.79, 0, 1.31, 1.94, 3.53, 1.77, 0]\n",
-      "1.0198936170212778\n"
+      "[0, 2.14, 0, 1.72, 1.19, 0, 1.46, 0, 0, 1.38, 0, 2.22, 1.46, 1.8, 0, 1.16, 0, 0, 1.62, 4.2, 3.65, 1.38, 2.07, 0, 0, 0, 1.35, 2.16, 0, 0, 0, 0, 1.14, 0, 1.18, 1.85, 4.1, 0, 2.1, 1.38, 0, 0, 2.36, 0, 2.41, 0, 3.7, 1.54, 1.37, 3.4, 0, 2.13, 2.05, 0, 1.9, 0, 0, 0, 1.1, 1.45, 2.25, 0, 1.6, 0, 1.35, 0, 2.04, 0, 1.71, 2.52, 1.59, 1.7, 0, 1.57, 2.44, 2.91, 2.26, 1.69, 2.81, 1.59, 1.81, 2.2, 0, 0, 2.75, 0, 0, 0, 0, 1.54, 1.47, 1.81, 0, 0, 0, 1.82, 1.6, 1.56, 0, 0, 0, 0, 1.53, 1.76, 0, 0, 0, 0, 3.5, 3.1, 0, 0, 0, 3.84, 1.29, 2.88, 0, 0, 0, 1.68, 0, 1.35, 1.59, 1.43, 0, 0, 0, 1.67, 2.56, 0, 0, 2.1, 2.51, 0, 1.44, 1.88, 1.56, 2.5, 0, 0, 1.54, 0, 0, 1.38, 0, 2.53, 0, 1.99, 0, 0, 0, 0, 1.19, 0, 2.72, 2.07, 0, 0, 0, 2.38, 0, 1.15, 0, 1.58, 2.65, 2.08, 0, 0, 0, 0, 0, 2.63, 0, 4.57, 1.76, 0, 0, 0, 2.11, 0, 0, 0, 1.83, 0, 3.45, 1.85, 0, 0, 1.5, 1.57, 1.53, 0, 3.39, 0, 0, 1.77, 2.06, 0, 1.55, 0, 2.01, 0, 0, 1.15, 1.95, 1.82, 0, 0, 0, 0, 0, 0, 2.48, 0, 0, 1.6, 0, 0, 0, 1.85, 2.09, 0, 1.66, 1.72, 0, 0, 2.58, 1.52, 3.2, 1.21, 0, 0, 0, 3.45, 1.91, 1.6, 1.85, 1.7, 0, 1.19, 1.47, 1.62, 3.04, 1.29, 1.59, 0, 1.55, 0, 0, 0, 1.23, 0, 0, 0, 0, 0, 0, 0, 0, 1.16, 0, 0, 2.52, 1.38, 0, 0, 0, 2.14, 3.75, 1.49, 2.72, 1.24, 2.04, 0, 0, 0, 2.25, 2.87, 0, 0, 3.62, 0, 1.5, 3.5, 2.2, 1.52, 1.93, 0, 0, 1.37, 0, 0, 0, 1.96, 0, 1.79, 1.29, 0, 1.38, 2.46, 3.9, 0, 0, 0, 2.78, 0, 1.57, 1.32, 0, 2.42, 1.26, 4.35, 0, 0, 0, 0, 1.6, 0, 1.45, 2.28, 1.25, 3.65, 0, 0, 2.02, 1.89, 0, 0, 0, 0, 0, 0, 0, 0, 1.53, 0, 0, 1.23, 3.5, 0, 2.32, 0, 1.38, 0, 0, 0, 1.92, 1.82, 3.1, 1.72, 0, 2.5, 0, 0, 1.63, 0, 2.17, 0, 2.33, 1.7, 0, 0, 3.26, 0, 1.56, 1.57, 3.75, 0, 0, 1.63, 0, 0, 0, 0, 1.74, 0, 1.4, 0, 0, 1.86, 1.42, 1.63, 0, 0, 1.86, 0, 0, 0, 0, 1.5, 0, 1.38, 0, 1.53, 0, 2.13, 1.33, 0, 2.4, 0, 0, 0, 4.4, 1.32, 0, 1.87, 0, 1.54, 0, 0, 2.15, 0, 3.63, 2.25, 1.34, 2.32, 2.08, 0, 3.16, 1.58, 1.27, 0, 0, 2.63, 0, 1.78, 1.96, 1.79, 0, 0, 1.28, 0, 1.67, 0, 0, 1.49, 0, 1.19, 1.48, 0, 1.76, 0, 0, 1.59, 2.6, 1.3, 2.04, 1.75, 0, 1.37, 0, 5.85, 1.24, 1.87, 0, 0, 1.13, 0, 0, 0, 1.83, 0, 1.3, 0, 0, 3.77, 0, 0, 0, 0, 1.48, 1.91, 0, 1.55, 0, 1.63, 1.24, 0, 2.38, 1.33, 1.83, 1.8, 0, 0, 2.1, 1.25, 0, 0, 0, 2.88, 1.83, 1.81, 0, 0, 1.68, 2.4, 0, 3.5, 0, 0, 0, 3.25, 0, 0, 1.42, 1.83, 1.75, 3.34, 0, 2.2, 0, 3.75, 1.39, 0, 0, 1.14, 3.41, 2.48, 1.66, 0, 2.15, 0, 2.09, 1.22, 0, 0, 0, 3.68, 1.46, 2.83, 2.48, 2.38, 0, 2.73, 0, 0, 1.42, 0, 2.47, 0, 0, 0, 0, 1.76, 0, 0, 0, 0, 1.43, 3.54, 0, 0, 0, 2.52, 0, 0, 0, 0, 0, 1.53, 1.22, 1.8, 1.52, 0, 1.33, 3.5, 0, 2.34, 0, 1.34, 0, 0, 0, 0, 1.35, 0, 0, 1.41, 1.44, 1.7, 2.1, 5.0, 0, 0, 1.47, 1.23, 3.8, 1.61, 1.45, 2.51, 0, 0, 1.19, 0, 0, 1.27, 1.47, 0, 1.78, 2.36, 2.36, 1.18, 0, 3.56, 2.28, 0, 1.15, 1.98, 1.21, 0, 0, 1.22, 1.46, 1.76, 0, 1.75, 0, 0, 1.74, 0, 0, 0, 0, 1.19, 1.42, 1.59, 0, 0, 0, 0, 0, 3.68, 0, 2.18, 1.34, 0, 0, 0, 0, 0, 3.64, 1.33, 0, 0, 0, 1.88, 0, 2.76, 2.63, 0, 1.97, 0, 0, 0, 3.55, 1.75, 0, 0, 1.63, 0, 1.14, 0, 0, 0, 1.29, 0, 0, 0, 2.4, 0, 1.2, 1.32, 0, 0, 0, 1.85, 0, 1.5, 0, 0, 1.7, 1.14, 0, 0, 1.95, 2.36, 0, 2.48, 1.18, 1.7, 1.63, 1.94, 0, 0, 0, 3.52, 1.32, 2.2, 0, 1.86, 2.45, 1.54, 2.88, 0, 0, 1.33, 1.65, 1.45, 1.66, 1.32, 0, 1.88, 0, 1.58, 2.3, 2.24, 1.36, 0, 1.67, 0, 0, 1.58, 0, 0, 0, 2.43, 0, 0, 2.26, 1.8, 1.16, 0, 1.26, 0, 3.89, 0, 0, 1.85, 1.56, 0, 0, 0, 0, 0, 2.0, 0, 0, 0, 2.5, 0, 0, 0, 1.28, 4.05, 2.65, 0, 0, 1.51, 0, 0, 0, 1.23, 0, 0, 0, 1.14, 0, 3.8, 0, 0, 1.59, 1.22, 0, 0, 1.47, 1.43, 3.14, 0, 0, 1.33, 0, 1.49, 0, 1.82, 0, 2.55, 0, 1.74, 2.86, 0, 1.5, 0, 1.86, 1.2, 1.56, 1.7, 1.49, 0, 1.29, 2.2, 1.38, 0, 0, 2.1, 0, 0, 0, 0, 1.42, 2.01, 0, 0, 1.4, 0, 2.5, 0, 1.22, 0, 1.95, 1.19, 1.2, 1.29, 1.95, 0, 0, 2.42, 1.72, 1.4, 1.67, 0, 0, 1.41, 1.85, 1.6, 0, 1.09, 0, 3.46, 0, 0, 0, 0, 1.44, 0, 0, 0, 0, 1.47, 0, 0, 0, 0, 1.85, 0, 1.96, 1.46, 1.14, 1.22, 1.36, 0, 0, 1.51, 0, 0, 0, 0, 0, 3.54, 1.1, 0, 1.34, 2.14, 0, 0, 1.59, 0, 0, 1.53, 2.32, 0, 1.92, 0, 0, 2.68, 1.37, 0, 1.54, 1.86, 0, 2.15, 0, 1.95, 0, 0, 0, 2.02, 1.4, 0, 1.8, 0, 1.44, 1.14, 1.88, 0, 0, 1.84, 2.69, 2.15, 0, 0, 0, 0, 0, 1.52, 1.87, 1.6, 0, 3.6, 0, 0, 2.34, 0, 4.28, 1.48, 1.69, 0, 0, 2.4, 0, 2.69, 1.23, 0, 2.23, 0, 0, 0, 3.72, 0, 1.33, 0, 0, 0, 2.0, 1.88, 0, 0, 1.24, 1.77, 1.77, 1.16, 0, 0, 3.15, 0, 0, 1.96, 0, 0, 0, 0, 1.28, 0, 1.68, 0, 2.42, 1.59, 0, 0, 0, 3.7, 0, 0, 0, 1.8, 1.55, 1.36, 1.35, 1.33, 0, 1.33, 1.98, 2.66, 0, 0, 0, 2.17, 0, 0, 5.8, 0, 2.18, 0, 1.32, 0, 0, 3.76, 2.23, 1.74, 3.52, 2.0, 0, 3.55, 0, 0, 2.8, 1.71, 1.7, 1.56, 0, 0, 1.4, 0, 0, 0, 2.58, 1.85, 3.83, 3.9, 1.22, 1.91, 0, 0, 0, 3.95, 1.94, 1.38, 1.44, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3.52, 2.6, 0, 0, 1.27, 1.58, 2.51, 0, 0, 0, 0, 2.55, 0, 0, 0, 1.66, 1.88, 0, 3.06, 2.05, 1.74, 1.83, 1.33, 4.1, 0, 1.4, 1.52, 1.52, 1.24, 0, 1.84, 1.67, 3.41, 0, 0, 0, 0, 0, 2.8, 3.86, 2.08, 1.48, 1.38, 1.63, 0, 0, 1.72, 1.49, 0, 0, 1.76, 0, 0, 0, 0, 1.29, 1.7, 1.31, 2.63, 0, 0, 3.3, 0, 1.8, 2.49, 0, 1.61, 1.75, 0, 0, 1.71, 2.2, 1.54, 1.65, 2.15, 2.75, 0, 0, 0, 1.27, 0, 0, 0, 0, 0, 0, 0, 0, 1.18, 0, 0, 1.77, 0, 0, 3.53, 0, 2.5, 1.21, 0, 1.92, 0, 1.84, 0, 0, 0, 1.92, 1.61, 1.81, 0, 0, 2.88, 1.7, 1.54, 0, 1.28, 1.83, 1.35, 1.6, 3.6, 1.64, 1.3, 1.23, 2.08, 0, 1.19, 1.87, 0, 1.52, 2.85, 0, 0, 0, 2.2, 0, 2.38, 0, 1.91, 1.41, 2.57, 2.1, 1.39, 0, 1.64, 2.07, 0, 1.55, 0, 0, 0, 0, 2.55, 1.25, 1.28, 0, 4.5, 1.7, 1.43, 2.1, 0, 3.86, 0, 0, 2.45, 2.0, 1.56, 0, 1.39, 1.21, 3.62, 1.36, 0, 2.48, 1.8, 0, 0, 1.34, 2.0, 2.73, 1.26, 1.97, 0, 1.75, 1.76, 0, 1.68, 1.33, 2.05, 0, 0, 0, 1.34, 0, 0, 1.21, 0, 1.78, 0, 0, 1.93, 0, 1.18, 0, 2.01, 1.71, 1.83, 1.51, 1.96, 1.73, 0, 1.31, 1.53, 1.58, 0, 0, 0, 0, 0, 1.17, 0, 0, 0, 1.43, 0, 1.45, 1.51, 0, 0, 0, 0, 1.36, 1.49, 0, 0, 0, 0, 0, 1.54, 1.8, 2.03, 1.68, 1.74, 3.44, 0, 0, 0, 0, 1.4, 0, 1.9, 1.46, 1.5, 0, 0, 1.46, 1.95, 1.55, 1.83, 0, 1.14, 2.19, 0, 0, 1.31, 0, 1.3, 1.74, 0, 0, 2.71, 0, 1.11, 0, 0, 0, 0, 0, 0, 1.22, 3.27, 1.38, 0, 1.63, 0, 1.45, 1.93, 0, 0, 0, 0, 0, 0, 0, 1.8, 0, 0, 2.51, 1.3, 1.51, 1.89, 2.67, 2.0, 0, 1.78, 1.29, 3.68, 0, 1.95, 1.25, 1.98, 0, 2.14, 1.29, 0, 0, 3.3, 0, 1.63, 0, 0, 4.7, 0, 3.55, 3.15, 2.49, 1.17, 2.3, 1.78, 1.28, 0, 1.92, 2.19, 1.53, 2.23, 2.27, 0, 0, 0, 2.72, 0, 0, 0, 1.87, 3.78, 0, 0, 2.27, 0, 1.43, 0, 0, 1.75, 1.64, 2.57, 0, 1.56, 1.4, 2.31, 1.1, 0, 3.41, 0, 1.82, 1.51, 0, 3.75, 1.69, 1.6, 3.79, 0, 1.31, 0, 0, 1.77, 4.5]\n",
+      "1.0177943262411353\n"
      ]
     }
    ],
    "source": [
     "counter = 0\n",
     "test = []\n",
-    "print(train_size)\n",
     "for i in range(0, len(y_val)):\n",
     "    if(y_val[i] == y_pred[i]):\n",
     "        if (y_val[i] == 0):\n",
@@ -169,7 +165,7 @@
     "        test.append(0)\n",
     "print(test)\n",
     "print(sum(test) / len(test))\n",
-    "        \n"
+    "\n"
    ]
   }
  ],
